# code-without-borders

./: .gitignore  AGENTS.md  README.md  nyc-benefits-screening-api.yml
.bob/agents/: container_operator.md  crewai_architect.md
.bob/notes/: pending-notes.txt
bob-reports/: TarciaP-bob_task.md  bob_task_may-3-2026_2-34-44-am.md
ny_benefits_oas/: README.md  pyproject.toml
ny_benefits_oas/docs/: Authenticate400Response.md  Authenticate405Response.md  ConfirmPasswordRequest.md  Credentials.md  DefaultApi.md  EligibleProgram.md  ErrorModel.md  Expense.md  ForgotPassword200Response.md  ForgotPasswordRequest.md  GetEligiblePrograms200Response.md  Household.md  Income.md  Person.md  Submission.md  Token.md
ny_benefits_oas/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
ny_benefits_oas/test/: test_authenticate400_response.py  test_authenticate405_response.py  test_confirm_password_request.py  test_credentials.py  test_default_api.py  test_eligible_program.py  test_error_model.py  test_expense.py  test_forgot_password200_response.py  test_forgot_password_request.py  test_get_eligible_programs200_response.py  test_household.py  test_income.py  test_person.py  test_submission.py  test_token.py
ny_benefits_screener/: .dockerignore  DOCKER.md  Dockerfile  README.md  SETUP_GUIDE.md  pyproject.toml
ny_benefits_screener/examples/: benefits_screening_example.py
ny_benefits_screener/src/ny_benefits_screener/: crew.py  main.py
ny_benefits_screener/src/ny_benefits_screener/tools/: README.md  __init__.py  nyc_benefits_screening_tool.py
(+40 files in other folders)
